2000-02-24  Ulrich Drepper  <drepper@redhat.com>

	* posix/sys/wait.h: Add missing #endif.

	* stdlib/stdlib.h (setstate): Don't mark argument as const (yet).
	* stdlib/random_r.c: Change parameter types for initstate_t and
	setstate_r.
	* include/stdlib.h: Change parameter types for __initstate_t and
	__setstate_r.

2000-02-24  Andreas Jaeger  <aj@suse.de>

	* include/stdlib.h: Fix prototypes of __initstate and __setstate.

	* manual/time.texi (Precision Time): Fix typo.
	Patch by John Tobey <jtobey@ne.mediaone.net>, PR libc/1576.

2000-02-24  Ulrich Drepper  <drepper@redhat.com>

	* conform/conformtest.pl (@headers): Add string.h and strings.h.
	* conform/data/string.h-data: New file.
	* conform/data/strings.h-data: New file.

	* string/string.h [__USE_XOPEN]: Don't declare functions from
	<strings.h> here as well.

2000-02-23  Ulrich Drepper  <drepper@redhat.com>

	* posix/sys/wait.h: Pretty printing.  Allow WEXITSTATUS etc be
	defined elsewhere.
	* stdlib/stdlib.h [__USE_XOPEN]: Define WEXITSTATUS etc.
	* sysdeps/generic/bits/waitflags.h: Allow including from stdlib.h.
	* sysdeps/unix/bsd/bits/waitflags.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/waitflags.h: Likewise.
	* sysdeps/unix/sysv/sysv4/bits/waitflags.h: Likewise.
	* sysdeps/generic/bits/waitstatus.h: Likewise.

	* posix/wordexp.c: Use we_offs everywhere if WRDE_DOOFS.  Expand ~
	correctly.  Detect syntax errors in command substitutions.  Delete
	trailing newlines correctly.  Don't split fields in command
	substitution situations.  Restore old structure in case of an
	error.  Handle WRDE_APPEND correctly.
	Patch by Geoff Clare <gwc@unisoft.com>.

	* locale/programs/ld-ctype.c (allocate_arrays): Make sure the end
	of width table is 4-byte aligned.
	(ctype_output): Write out the entire width array.

	* sysdeps/unix/sysv/linux/bits/waitflags.h: Add __WALL.

2000-02-23  Andreas Jaeger  <aj@suse.de>

	* dlfcn/dlopen.c: Include <stddef.h> for NULL.
	* dlfcn/dlopenold.c: Likewise.
	* dlfcn/dlsym.c: Likewise.